Added datatables css and js and changed global nav

--- a/CarHub/Views/Shared/_Layout.cshtml
+++ b/CarHub/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link rel="stylesheet" type="text/css" href="~/css/ie10-viewport-bug-workaround.css">
 
+    <link href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" type="text/css" rel="stylesheet" />
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script  src="js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="~/js/ie-emulation-modes-warning.js"></script>
@@ -87,13 +89,13 @@
                 <div class="navbar-collapse collapse w-100" id="navbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown active">
-                            <a class="nav-link">
+                            <a class="nav-link" asp-action="Index" asp-controller="Home">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link">
-                                Car Listing
+                            <a class="nav-link" asp-action="Index" asp-controller="Admin">
+                                Admin
                             </a>
                         </li>
                     </ul>
@@ -240,7 +242,7 @@
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     <script src="https://transloadit.edgly.net/releases/uppy/v1.14.1/uppy.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
