--- a/CarHub/Views/Admin/Index.cshtml
+++ b/CarHub/Views/Admin/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h3 class="title add-new-link">
-                    <a asp-action="AddNewInventory" asp-controller="Admin"><span>Add New</span></a>
+                    <a asp-action="ManageInventory" asp-controller="Admin"><span>Add New</span></a>
                 </h3>
                 <!-- Option bar start -->
                 @if (Model.Count > 0)
@@ -18,6 +18,7 @@
                     <table id="table_id" class="display">
                         <thead>
                             <tr>
+                                <th>Action</th>
                                 <th>Image</th>
                                 <th>Make</th>
                                 <th>Model</th>
@@ -47,6 +48,11 @@
                             @foreach (var item in Model)
                             {
                             <tr>
+                                <td>
+                                    <form>
+                                        <button asp-action="ManageInventory" asp-controller="Admin" asp-route-id="@item.Id">Edit</button>
+                                    </form>
+                                </td>
                                 <td>
                                     @{
 
