Code clean up using CodeRush and removed footer from admin pages

--- a/CarHub/Views/Admin/Index.cshtml
+++ b/CarHub/Views/Admin/Index.cshtml
@@ -117,7 +117,7 @@
                 "scrollY": 500,
                 "scrollX": true
             });
-
+            $('footer').empty();
         });
     </script>
 }
